# yt-watcher-bot

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/yt_watcher_bot/: __about__.py  main.py
tests/: __init__.py
