[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yt-watcher-bot"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Sayan Goswami", email = "goswami.sayan47@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "selenium",
]

[project.urls]
Documentation = "https://github.com/Sayan Goswami/yt-watcher-bot#readme"
Issues = "https://github.com/Sayan Goswami/yt-watcher-bot/issues"
Source = "https://github.com/Sayan Goswami/yt-watcher-bot"

[tool.hatch.version]
path = "src/yt_watcher_bot/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/yt_watcher_bot tests}"

[tool.coverage.run]
source_pkgs = ["yt_watcher_bot", "tests"]
branch = true
parallel = true
omit = [
  "src/yt_watcher_bot/__about__.py",
]

[tool.coverage.paths]
yt_watcher_bot = ["src/yt_watcher_bot", "*/yt-watcher-bot/src/yt_watcher_bot"]
tests = ["tests", "*/yt-watcher-bot/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.envs.default.scripts]
bot = [
  "python src/yt_watcher_bot/main.py"
]
